--- a/Talk7/02_background/02_background.tex
+++ b/Talk7/02_background/02_background.tex
@@ -1,7 +1,7 @@
 \section{Background}
 \label{sec:02_background}
 
-In this section, we try to build a solid foundation with regards to the theoretical concepts and background that are needed to follow the concepts presented in section \ref{sec:03_related_work}. We first present the traditional ideas as they have been part of research for the past decades (section \ref{subsec:02_cybersecurity}). Section \ref{subsec:02_blockchain} subsequently elaborates on the core concepts of the blockchain, as far as is needed to understand the main thesis of this work. Section \ref{subsec:02_smart_contracts} finally reviews the concept of smart contracts and how they developed as an evolution of the existing blockchain architecture.
+In this section, we try to build a solid foundation with regards to the theoretical concepts and background that are needed to follow the concepts presented in section \ref{sec:03_related_work}. We first present the traditional ideas of cybersecurity as they have been part of research for the past decades (section \ref{subsec:02_cybersecurity}). Section \ref{subsec:02_blockchain} subsequently elaborates on the core concepts of the blockchain as far as is needed to understand the main thesis of this work. Section \ref{subsec:02_smart_contracts} finally reviews the concept of smart contracts and how they have developed as an evolution of the existing blockchain architecture.
 
 \input{Talk7/02_background/02-1_cybersecurity.tex}
 \input{Talk7/02_background/02-2_blockchain.tex}
