Go through DDoS

--- a/Talk7/Seminar-Arbeit.tex
+++ b/Talk7/Seminar-Arbeit.tex
@@ -5,20 +5,7 @@
 \chaptauthors{Lenz, Pascal, Roland, Silas}
 
 \Kurzfassung{
-The ability of the blockchain technology to handle tasks in a decentralized manner and its property to leave an audit trail of all its history makes it a perfect match when addressing cyber security related issues. Wether it directly mitigates them or it is used to create more secure applications, the blockchain has a lot to offer. This paper starts with a brief introduction to blockchains in general and continues with an overview of the various approaches and ideas that exist for the integration of the blockchain technology into the applications to increase overall security of the application or a whole scenario.}
-
-
-
-TODOs:
-Shortening and finalizing till monday
-Important: CHECK your bibtex entries
-\begin{enumerate}
-	\item Introduction: 1 - 2 pages --> Roland
-	\item Background all together max 6 pages (2 pages each)
-	\item Related work max 6 pages per chapter
-	\item Conclusion: 2 pages --> Silas
-\end{enumerate}
-
+The ability of the blockchain technology to handle tasks in a decentralized manner and its property to leave an audit trail of all its history makes it a perfect match when addressing cyber security related issues. Wether it directly mitigates them or it is used to create more secure applications, the blockchain has a lot to offer. This paper starts with a brief introduction to blockchains in general and continues with an overview of the various approaches and ideas that exist for the integration of the blockchain technology with cybersecurity to increase overall security of applications or a whole scenario.}
 
 \newpage
 
@@ -37,6 +24,6 @@ Important: CHECK your bibtex entries
 \input{Talk7/04_final_considerations/04_final_considerations}
 
 
-\nocite{*}
+% \nocite{*}
 \bibliographystyle{ieeetr}
 \bibliography{Talk7/library}
