--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -1,35 +1,35 @@
 % Encoding: UTF-8
 @misc{FollowMyVote,
-author = {{Follow My Vote}, Inc.},
-mendeley-groups = {ComSys Seminar},
-title = {{The Online Voting Platform of The Future - Follow My Vote}},
-url = {https://followmyvote.com/},
-urldate = {2019-04-15}
+  author = {{Follow My Vote}, Inc.},
+  mendeley-groups = {ComSys Seminar},
+  title = {{The Online Voting Platform of The Future - Follow My Vote}},
+  url = {https://followmyvote.com/},
+  urldate = {2019-04-15}
 }
 
 @book{Kahn1991,
-author = {Kahn, David},
-title = {{Seizing the Enigma: The Race to Break the German U-Boats Codes, 1939-1943}},
-year = {1991}
+  author = {Kahn, David},
+  title = {{Seizing the Enigma: The Race to Break the German U-Boats Codes, 1939-1943}},
+  year = {1991}
 }
 
 @article{Shackelford2016,
-archivePrefix = {arXiv},
-arxivId = {arXiv:1011.1669v3},
-author = {Shackelford, Scott and Myers, Steven},
-doi = {10.2139/ssrn.2874090},
-eprint = {arXiv:1011.1669v3},
-file = {:Users/lenzbaumann/Library/Application Support/Mendeley Desktop/Downloaded/Shackelford, Myers - 2016 - Block-by-Block Leveraging the Power of Blockchain Technology to Build Trust and Promote Cyber Peace.pdf:pdf},
-isbn = {0674539265},
-issn = {1556-5068},
-journal = {Yale Journal of Law and Technology (2017 Forthcoming)},
-keywords = {Bitcoin,blockchain,cyber attack,cyber peace,cybersecurity,polycentric governance},
-mendeley-groups = {ComSys Seminar},
-pages = {16--85},
-pmid = {21675331},
-title = {{Block-by-Block: Leveraging the Power of Blockchain Technology to Build Trust and Promote Cyber Peace}},
-volume = {Kelley Sch},
-year = {2016}
+  archivePrefix = {arXiv},
+  arxivId = {arXiv:1011.1669v3},
+  author = {Shackelford, Scott and Myers, Steven},
+  doi = {10.2139/ssrn.2874090},
+  eprint = {arXiv:1011.1669v3},
+  file = {:Users/lenzbaumann/Library/Application Support/Mendeley Desktop/Downloaded/Shackelford, Myers - 2016 - Block-by-Block Leveraging the Power of Blockchain Technology to Build Trust and Promote Cyber Peace.pdf:pdf},
+  isbn = {0674539265},
+  issn = {1556-5068},
+  journal = {Yale Journal of Law and Technology (2017 Forthcoming)},
+  keywords = {Bitcoin,blockchain,cyber attack,cyber peace,cybersecurity,polycentric governance},
+  mendeley-groups = {ComSys Seminar},
+  pages = {16--85},
+  pmid = {21675331},
+  title = {{Block-by-Block: Leveraging the Power of Blockchain Technology to Build Trust and Promote Cyber Peace}},
+  volume = {Kelley Sch},
+  year = {2016}
 }
 
 @misc{BlockchainTechnologiesCorporation,
@@ -41,11 +41,11 @@ urldate = {2019-04-15}
 }
 
 @article{Kirby2016,
-author = {Kirby, Kevin and Masi, Anthony and Maymi, Fernando},
-pages = {14},
-publisher = {The Economist},
-title = {{Votebook: A proposal for a blockchain-based electronic voting system}},
-year = {2016}
+  author = {Kirby, Kevin and Masi, Anthony and Maymi, Fernando},
+  pages = {14},
+  publisher = {The Economist},
+  title = {{Votebook: A proposal for a blockchain-based electronic voting system}},
+  year = {2016}
 }
 @misc{EuropeanCommission2017,
 author = {{European Commission}},
@@ -55,18 +55,18 @@ title = {{General Data Protection Regulation (GDPR)}},
 url = {https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32016R0679{\&}from=EN{\#}d1e2589-1-1},
 urldate = {2019-04-10},
 year = {2017}
-}	
+}
 @article{Dorri2017SmartHome,
-author = {Dorri, Ali and Kanhere, Salil S. and Jurdak, Raja and Gauravaram, Praveen},
-doi = {10.1109/PERCOMW.2017.7917634},
-isbn = {9781509043385},
-issn = {18732542},
-journal = {2017 IEEE International Conference on Pervasive Computing and Communications Workshops, PerCom Workshops 2017},
-pages = {618--623},
-pmid = {24894131},
-publisher = {IEEE},
-title = {{Blockchain for IoT security and privacy: The case study of a smart home}},
-year = {2017}
+  author = {Dorri, Ali and Kanhere, Salil S. and Jurdak, Raja and Gauravaram, Praveen},
+  doi = {10.1109/PERCOMW.2017.7917634},
+  isbn = {9781509043385},
+  issn = {18732542},
+  journal = {2017 IEEE International Conference on Pervasive Computing and Communications Workshops, PerCom Workshops 2017},
+  pages = {618--623},
+  pmid = {24894131},
+  publisher = {IEEE},
+  title = {{Blockchain for IoT security and privacy: The case study of a smart home}},
+  year = {2017}
 }
 @article{DorriSteger2017,
   abstract = {Future smart vehicles will be part of the Internet of Things to offer beneficial development opportunities for both end users as well as the automotive industry. This will potentially expose smart vehicles to a range of security and privacy threats such as tracking or hijacking a vehicle while driving. A comprehensive security architecture for automotive systems is required to allow the development of new services while protecting the vehicles from attacks and ensuring the privacy of the end users. In this paper we argue that BlockChain (BC), a disruptive technology that has found many applications from cryptocurrency to smart contracts, is a potential solution to automotive security and privacy challenges. We propose a BC-based architecture to protect the privacy of the users and to increase the security of the vehicular eco-system. Wireless remote software updates and other emerging services in the automotive world such as dynamic vehicle insurance fees, are used to illustrate the utilization of the proposed security architecture. We also provide discussions on the security of the architecture against important attacks.},
@@ -184,23 +184,23 @@ year = {2017}
   year = {2018}
 }
 @article{Khan2018,
-abstract = {With the advent of smart homes, smart cities, and smart everything, the Internet of Things (IoT) has emerged as an area of incredible impact, potential, and growth, with Cisco Inc. predicting to have 50 billion connected devices by 2020. However, most of these IoT devices are easy to hack and compromise. Typically, these IoT devices are limited in compute, storage, and network capacity, and therefore they are more vulnerable to attacks than other endpoint devices such as smartphones, tablets, or computers. In this paper, we present and survey major security issues for IoT. We review and categorize popular security issues with regard to the IoT layered architecture, in addition to protocols used for networking, communication, and management. We outline security requirements for IoT along with the existing attacks, threats, and state-of-the-art solutions. Furthermore, we tabulate and map IoT security problems against existing solutions found in the literature. More importantly, we discuss, how blockchain, which is the underlying technology for bitcoin, can be a key enabler to solve many IoT security problems. The paper also identifies open research problems and challenges for IoT security.},
-archivePrefix = {arXiv},
-arxivId = {1705.08230},
-author = {Khan, Minhaj Ahmad and Salah, Khaled},
-doi = {10.1016/j.future.2017.11.022},
-eprint = {1705.08230},
-file = {:C$\backslash$:/Users/Silas/Dropbox/FS19/Seminar Communication Systems/papers/iot papers/IoT security Blockchain review.pdf:pdf},
-isbn = {0167-739X},
-issn = {0167739X},
-journal = {Future Generation Computer Systems},
-keywords = {Blockchain,Data security,IoT protocols,IoT security,Network security},
-pages = {395--411},
-publisher = {Elsevier B.V.},
-title = {{IoT security: Review, blockchain solutions, and open challenges}},
-url = {https://doi.org/10.1016/j.future.2017.11.022},
-volume = {82},
-year = {2018}
+  abstract = {With the advent of smart homes, smart cities, and smart everything, the Internet of Things (IoT) has emerged as an area of incredible impact, potential, and growth, with Cisco Inc. predicting to have 50 billion connected devices by 2020. However, most of these IoT devices are easy to hack and compromise. Typically, these IoT devices are limited in compute, storage, and network capacity, and therefore they are more vulnerable to attacks than other endpoint devices such as smartphones, tablets, or computers. In this paper, we present and survey major security issues for IoT. We review and categorize popular security issues with regard to the IoT layered architecture, in addition to protocols used for networking, communication, and management. We outline security requirements for IoT along with the existing attacks, threats, and state-of-the-art solutions. Furthermore, we tabulate and map IoT security problems against existing solutions found in the literature. More importantly, we discuss, how blockchain, which is the underlying technology for bitcoin, can be a key enabler to solve many IoT security problems. The paper also identifies open research problems and challenges for IoT security.},
+  archivePrefix = {arXiv},
+  arxivId = {1705.08230},
+  author = {Khan, Minhaj Ahmad and Salah, Khaled},
+  doi = {10.1016/j.future.2017.11.022},
+  eprint = {1705.08230},
+  file = {:C$\backslash$:/Users/Silas/Dropbox/FS19/Seminar Communication Systems/papers/iot papers/IoT security Blockchain review.pdf:pdf},
+  isbn = {0167-739X},
+  issn = {0167739X},
+  journal = {Future Generation Computer Systems},
+  keywords = {Blockchain,Data security,IoT protocols,IoT security,Network security},
+  pages = {395--411},
+  publisher = {Elsevier B.V.},
+  title = {{IoT security: Review, blockchain solutions, and open challenges}},
+  url = {https://doi.org/10.1016/j.future.2017.11.022},
+  volume = {82},
+  year = {2018}
 }
 @article{Mannhart2018,
 author = {Mannhart, Stephan and Rodrigues, Bruno and Scheid, Eder and Kanhere, Salil S. and Stiller, Burkhard},
@@ -306,10 +306,10 @@ url = {http://arxiv.org/abs/1704.02553},
 year = {2017}
 }
 @article{Instituut2005,
-author = {Instituut, Telematica and Larson, M and Rose, S},
-pages = {1--21},
-title = {{DNS Security Introduction and Requirements}},
-year = {2005}
+  author = {Instituut, Telematica and Larson, M and Rose, S},
+  pages = {1--21},
+  title = {{DNS Security Introduction and Requirements}},
+  year = {2005}
 }
 @article{Banerjee2018,
   abstract = {Internet of Things (IoT) devices are increasingly being found in civilian and military contexts, ranging from smart cities and smart grids to Internet-of-Medical-Things, Internet-of-Vehicles, Internet-of-Military-Things, Internet-of-Battlefield-Things, etc. In this paper, we survey articles presenting IoT security solutions published in English since January 2016. We make a number of observations, including the lack of publicly available IoT datasets that can be used by the research and practitioner communities. Given the potentially sensitive nature of IoT datasets, there is a need to develop a standard for sharing IoT datasets among the research and practitioner communities and other relevant stakeholders. Thus, we posit the potential for blockchain technology in facilitating secure sharing of IoT datasets (e.g., using blockchain to ensure the integrity of shared datasets) and securing IoT systems, before presenting two conceptual blockchain-based approaches. We then conclude this paper with nine potential research questions.},
@@ -585,15 +585,15 @@ year = {2016}
   year = {2017}
 }
 @article{Lepoint2018,
-author = {Lepoint, Tancrede and Ciocarlie, Gabriela and Eldefrawy, Karim},
-doi = {10.1109/IC2E.2018.00072},
-isbn = {978-1-5386-5008-0},
-issn = {2169141X 21691401},
-journal = {2018 IEEE International Conference on Cloud Engineering (IC2E)},
-pages = {378--384},
-title = {{BlockCIS A Blockchain Based Cyber Insurance System}},
-url = {https://ieeexplore.ieee.org/document/8360357/},
-year = {2018}
+  author = {Lepoint, Tancrede and Ciocarlie, Gabriela and Eldefrawy, Karim},
+  doi = {10.1109/IC2E.2018.00072},
+  isbn = {978-1-5386-5008-0},
+  issn = {2169141X 21691401},
+  journal = {2018 IEEE International Conference on Cloud Engineering (IC2E)},
+  pages = {378--384},
+  title = {{BlockCIS A Blockchain Based Cyber Insurance System}},
+  url = {https://ieeexplore.ieee.org/document/8360357/},
+  year = {2018}
 }
 @inproceedings{Dai2017,
 abstract = {With the accelerated iteration of technological innovation, blockchain has rapidly become one of the hottest Internet technologies in recent years. As a decentralized and distributed data management solution, blockchain has restored the definition of trust by the embedded cryptography and consensus mechanism, thus providing security, anonymity and data integrity without the need of any third party. But there still exists some technical challenges and limitations in blockchain. This paper has conducted a systematic research on current blockchain application in cybersecurity. In order to solve the security issues, the paper analyzes the advantages that blockchain has brought to cybersecurity and summarizes current research and application of blockchain in cybersecurity related areas. Through in-depth analysis and summary of the existing work, the paper summarizes four major security issues of blockchain and performs a more granular analysis of each problem. Adopting an attribute-based encryption method, the paper also puts forward an enhanced access control strategy.},
@@ -1101,7 +1101,7 @@ year = {2015}
 
 @misc{noauthor_namecoin_nodate,
   title = {Namecoin},
-  url = {https://namecoin.org/},
+  note = {\url{https://namecoin.org/}},
   urldate = {2019-04-14},
   journal = {Namecoin}
 }
