--- a/Talk7/03_related_work/03-2_pki_ksi.tex
+++ b/Talk7/03_related_work/03-2_pki_ksi.tex
@@ -7,7 +7,7 @@ What makes this type of cryptography so convenient is that its security does not
 
 For a private exchange between two to a few counterparties, the simple approach of distributing public keys out-of-band (e.g., in person) might suffice to establish sufficient confidence and trust. As soon as we consider communication networks on a larger scale, an in-person exchange between all parties in the network would no longer be feasible. In such a case, one or more trusted, often centralized entities need to support the process of establishing trust \cite{straub_tobias_usability_2006}.
 
-Public Key Infrastructure (PKI) is the summary term for an infrastructure that enables secure communication through such trusted entities. As described by \citeauthor{straub_tobias_usability_2006}, a PKI "lets participants communicate with each other securely using public key cryptography and allows them to verify each other's keys with the help of certificates and trust relations."
+Public Key Infrastructure (PKI) is the summary term for an infrastructure that enables secure communication through such trusted entities. As described in \cite{straub_tobias_usability_2006}, a PKI "lets participants communicate with each other securely using public key cryptography and allows them to verify each other's keys with the help of certificates and trust relations."
 
 
 \subsubsection{Existing PKI Systems}
@@ -90,9 +90,9 @@ It is also still a topic of research if and how a decentralized system could sup
 
 Certificate Transparency (CT) is a recent improvement to the traditional web certification model. When CT is enforced by a browser (e.g., modern versions of Chrome), the browser only accepts certificates without warning if they have been published to a public append-only log of certificate issuances. This measure has been introduced to counteract the malicious issuance of certificates by hacked CAs or through compulsion or malfeasance \cite{zohar_blockchain-based_2019}.
 
-While CT in traditional web certification can already improve web security significantly, it is only a reactive measure, meaning that fraud can still occur but are probably recognized more quickly. \citeauthor{zohar_blockchain-based_2019} propose that certificate issuance as well as handling the revocation of certificates could be moved to a blockchain-based system, preventing the issuing of malicious certificates entirely without the approval of the domain owner.
+While CT in traditional web certification can already improve web security significantly, it is only a reactive measure, meaning that fraud can still occur but are probably recognized more quickly. \cite{zohar_blockchain-based_2019} proposes that certificate issuance as well as handling the revocation of certificates could be moved to a blockchain-based system, preventing the issuing of malicious certificates entirely without the approval of the domain owner.
 
-In the solution proposed by \citeauthor{zohar_blockchain-based_2019}, certificate authorities would not hold the solemn authority over certification. Instead, a certificate would only ever be valid if the associated web server cooperates in their publication by publishing the CA-issued certificate to a public certificate issuance blockchain. Browsers would then only accept certificates that have been both issued by a valid CA and published to the blockchain. By additionally enforcing a short expiration time on certificates, certificates that need to be revoked could just not be renewed, causing the CA to issue a revocation. Similarly to the approach taken in Ghazal, a key challenge of such an approach is that clients need to maintain a copy of the certificate blockchain to verify the integrity of certificates.
+In the solution proposed in \cite{zohar_blockchain-based_2019}, certificate authorities would not hold the solemn authority over certification. Instead, a certificate would only ever be valid if the associated web server cooperates in their publication by publishing the CA-issued certificate to a public certificate issuance blockchain. Browsers would then only accept certificates that have been both issued by a valid CA and published to the blockchain. By additionally enforcing a short expiration time on certificates, certificates that need to be revoked could just not be renewed, causing the CA to issue a revocation. Similarly to the approach taken in Ghazal, a key challenge of such an approach is that clients need to maintain a copy of the certificate blockchain to verify the integrity of certificates.
 
 
 \subsubsection{Keyless Signature Infrastructures and Blockchain}
@@ -101,6 +101,6 @@ A Keyless Signature Infrastructure (KSI) is the basis for an alternative approac
 
 The KSI architecture processes incoming signature requests in rounds (e.g., one round per second) and, after completion of a round, appends the root-hash of the generated hash tree to a global tree ("hash calendar"). The root of this global tree is then periodically published as a trust anchor that can be used to verify the presence of a document at a point before its publication \cite{hutchison_keyless_2013}. Contrary to the approach of signing documents with one's private key, this approach depends on the infrastructure (i.e., signing servers) to sign the document into the tree. This is what makes possible keyless signing but also incurs a dependency on the availability of the KSI to sign a document \cite{jamthagen_blockchain-based_2016}.
 
-\citeauthor{hutchison_keyless_2013} suggest that the root-hash could be published to broad-reach media like newspapers in monthly iterations. This would allow verification of a document's integrity even without the KSI infrastructure, as one can compute the root-hash and compare it to the one published. However, this approach is inefficient in that it needs manual verification against an external medium and can only be performed with a reasonable publishing frequency \cite{jamthagen_blockchain-based_2016}.
+\cite{hutchison_keyless_2013} suggests that the root-hash could be published to broad-reach media like newspapers in monthly iterations. This would allow verification of a document's integrity even without the KSI infrastructure, as one can compute the root-hash and compare it to the one published. However, this approach is inefficient in that it needs manual verification against an external medium and can only be performed with a reasonable publishing frequency \cite{jamthagen_blockchain-based_2016}.
 
 The blockchain-based approach presented in \cite{jamthagen_blockchain-based_2016} improves the efficiency by publishing to the blockchain in an increased frequency such that one can more granularly verify when a document was signed (i.e., added to the tree). Additionally, the break between media is no longer necessary, as signatures can be automatically verified based on the blockchain contents. When publishing to the blockchain, the frequency can be increased to several times per hour, as it is only limited by the throughput of blocks being mined \cite{jamthagen_blockchain-based_2016}.
