Bibliography for websites

--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -2,6 +2,7 @@
 @misc{FollowMyVote,
   author = {{Follow My Vote}, Inc.},
   mendeley-groups = {ComSys Seminar},
+  note = {\url{https://followmyvote.com/}, accessed on 2019-04-15},
   title = {{The Online Voting Platform of The Future - Follow My Vote}},
   url = {https://followmyvote.com/},
   urldate = {2019-04-15}
@@ -34,6 +35,7 @@
 
 @misc{BlockchainTechnologiesCorporation,
 author = {{Blockchain Technologies Corporation}},
+note = {\url{http://votewatcher.com/}, accessed on 2019-04-15},
 mendeley-groups = {ComSys Seminar},
 title = {{VoteWatcher - The World's Most Transparent Voting Machine}},
 url = {http://votewatcher.com/{\#}},
@@ -49,6 +51,7 @@ urldate = {2019-04-15}
 }
 @misc{EuropeanCommission2017,
 author = {{European Commission}},
+note = {\url{https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32016R0679{\&}from=EN{\#}d1e2589-1-1}, accessed on 2019-04-10},
 mendeley-groups = {ComSys Seminar},
 pages = {Article 17},
 title = {{General Data Protection Regulation (GDPR)}},
@@ -159,7 +162,8 @@ year = {2017}
 }
 
 @misc{Economist2015,
-  author = {Economist, The},
+  publisher = {The Economist},
+  note = {\url{https://www.economist.com/leaders/2015/10/31/the-trust-machine}, accessed on 2019-04-06},
   mendeley-groups = {ComSys Seminar},
   title = {{The Trust Machine}},
   url = {https://www.economist.com/leaders/2015/10/31/the-trust-machine},
@@ -226,6 +230,7 @@ year = {2016}
 @misc{Cloudflare2019,
   author = {Cloudflare},
   title = {{IP Spoofing}},
+  note = {\url{https://www.cloudflare.com/learning/ddos/glossary/ip-spoofing/}, accessed on 2019-03-29},
   url = {https://www.cloudflare.com/learning/ddos/glossary/ip-spoofing/},
   urldate = {2019-03-29},
   year = {2019}
@@ -1101,7 +1106,7 @@ year = {2015}
 
 @misc{noauthor_namecoin_nodate,
   title = {Namecoin},
-  note = {\url{https://namecoin.org/}},
+  note = {\url{https://namecoin.org/}, accessed on 2019-04-14},
   urldate = {2019-04-14},
   journal = {Namecoin}
 }
