--- a/Talk7/Seminar-Arbeit.tex
+++ b/Talk7/Seminar-Arbeit.tex
@@ -2,7 +2,7 @@
   in the Context of Cybersecurity}
 \markboth{Investigating the Blockchain Technology
 	in the Context of Cybersecurity}{}
-\chaptauthors{Lenz Baumann, Roland Schläfli, Silas Weber, Pascal Zehnder}
+\chaptauthors{Lenz Baumann, Roland Schlaefli, Silas Weber, Pascal Zehnder}
 
 \Kurzfassung{
 The ability of the blockchain technology to handle tasks in a decentralized manner and its property to leave an audit trail of all its history makes it a perfect match when addressing cyber security related issues. Wether it directly mitigates them or it is used to create more secure applications, the blockchain has a lot to offer. This paper starts with a brief introduction to blockchains in general and continues with an overview of the various approaches and ideas that exist for the integration of the blockchain technology with cybersecurity to increase overall security of applications or a whole scenario.}
