--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -1110,3 +1110,32 @@ year = {2015}
   urldate = {2019-04-14},
   journal = {Namecoin}
 }
+
+@misc{coinmarketcap,
+  title = {Coinmarketcap},
+  note = {\url{https://coinmarketcap.com/}, accessed on 2019-04-14},
+  urldate = {2019-04-14},
+  journal = {Coinmarketcap}
+
+}
+
+@misc{ethereumyellowpaer,
+  title = {Ethereum Yellow Paper},
+  note = {\url{https://ethereum.github.io/yellowpaper/paper.pdf/}, accessed on 2019-04-14},
+  urldate = {2019-04-14},
+  journal = {Ethereum Yellow Paper}
+
+}
+
+@misc{blockgeeks,
+  title = {Blockgeeks Ethereum Gas},
+  note = {\url{https://blockgeeks.com/guides/ethereum-gas/}, accessed on 2019-04-14},
+  urldate = {2019-04-14},
+  journal = {Blockgeeks Ethereum Gas}
+
+}
+
+
+
+
+
