typos plus final considerations

--- a/Talk7/02_background/02-3_smart_contracts.tex
+++ b/Talk7/02_background/02-3_smart_contracts.tex
@@ -6,7 +6,7 @@ Ethereum is a blockchain ''with built-in programming language'', or in other wor
 The Ethereum project started in 2015 and has gained popularity since then. It is second place in terms of market capitalization according to coinmarketcap.com, right after bitcoin and followed by ripple \cite{coinmarketcap}.
 
 Nodes in the Ethereum network make up the Ethereum Virtual Machine (EVM). Smart contracts are written in the programming language solidity. They get compiled to bytecode that the EVM can understand.
-Once deployed on the blockchain, the code cannot be changed. Deploying smart contracts means mining them into the blockchain, thus deploying smart contracts costs a fee like every other transaction. Once they are there, they are part of the blockchain history. Every smart contract on the blockchain lives at an address where the contracts exposed functions and variables can interact with. Smart contracts can inherit from smart contracts and interact with other smart contracts.
+Once deployed on the blockchain, the code cannot be changed. Deploying smart contracts means mining them into the blockchain, thus deploying smart contracts costs a fee like every other transaction. Once they are there, they are part of the blockchain history. Every smart contract on the blockchain lives at an address where the contracts exposed functions and variables can interact with. Smart contracts can inherit from smart contracts and can interact with other smart contracts.
 
 Smart contracts can also be sent the cryptocurrency ether to. Sending ether to a smart contract that does not provide functionality to retrieve those ethers means they are lost forever in the contract. This is crucial especially when designing contracts that implement business logic or any contracts for that matter. Smart contracts should be reviewed and audited carefully and tested for vulnerabilities else its weaknesses can be exploited like in the infamous ``DAO`` attack.
 
