--- a/Talk7/03_related_work/03-2_pki_ksi.tex
+++ b/Talk7/03_related_work/03-2_pki_ksi.tex
@@ -26,7 +26,7 @@ Contrary to the centralized approach, the Pretty Good Privacy (PGP) architecture
 
 PKI systems allow for an establishment of trust and a secure exchange between parties that do not necessarily know each other. However, both participating parties need to trust the centralized CA to issue valid certificates. The most visible threat to a PKI system is, therefore, an attack on this centralized trusted party.
 
-Ans such kind of attack could, if successful, allow an intruder to generate fraudulent certificates, which could then be used to impersonate one or more of the parties and perform a proxied man-in-the-middle attack. In such an attack, the attacker acts as a proxy that intercepts messages between the parties, decrypts and extracts their contents, and redirects them to the original recipient, making it very difficult for the participants to figure out they are being intercepted \cite{zusman_criminal_2008}.
+Any such kind of attack could, if successful, allow an intruder to generate fraudulent certificates, which could then be used to impersonate one or more of the parties and perform a proxied man-in-the-middle attack. In such an attack, the attacker acts as a proxy that intercepts messages between the parties, decrypts and extracts their contents, and redirects them to the original recipient, making it very difficult for the participants to figure out they are being intercepted \cite{zusman_criminal_2008}.
 
 In the concrete example of a web certification authority, domains are most often validated by merely sending an email to an address on the domain to be certified (e.g., webmaster@xyz) or by verification of DNS records. This indirect verification creates vulnerabilities on several levels, as emails and DNS settings are managed by separate entities that could be attacked. CAs have also been known to issue fraudulent certificates on government request (e.g., for censorship), or through simple human error \cite{zusman_criminal_2008, zohar_blockchain-based_2019}.
 
