--- a/Talk7/04_final_considerations/04_final_considerations.tex
+++ b/Talk7/04_final_considerations/04_final_considerations.tex
@@ -7,6 +7,7 @@ The goal of this section is first to summarize the key points of this paper, and
 After giving some foundational concepts in the areas of cybersecurity, blockchain, and smart contracts, the potential use of blockchain technology for combating DDoS attacks, for decentralizing public key infrastructure (PKI), for securing the Internet of Things (IoT), as well as for some specific applications is described. Blockchain technology is a good choice whenever there is a need for integrity and decentralization.
 
 For dealing with DDoS attacks, blockchains and smart contracts can be used to serve as a decentralized database to store white- and blacklisted IP-addresses. Blockchains and smart contract also facilitate the sharing of information.
+Various mitigation techniques such as Software-Defined Networks (SDN) and Network Function Virtualization (NFV) can be combined and facilited with blockchain technology and smart contracts.
 
 In public key infrastructure, a major danger is a certificate authority being hacked. Decentralizing the public key infrastructure averts this danger. Namecoin is a blockchain with the goal to store all DNS-related naming information in a blockchain. There are blockchain-based PKI solutions that build upon namecoin to decentralize the PKI architecture.
 With gazal, the traditional web certification model is moved to the Ethereum blockchain with a smart contract specifying all procedures regarding the registration, transfer, and expiration of domains, as well as the associated values and certificates.
@@ -18,6 +19,10 @@ where access roles between all smart devices are defined in smart contracts, sec
 Furthermore, blockchain technology can be used in various concrete applications to enhance their security.
 In e-voting systems, blockchains can be used as a transparent and incorruptible database.
 In smart cities, an autonomous vehicles blockchain technology can enhance cybersecurity as well.
+In the healthcare sectors blockchain can be used to share patients data between hospitals with an auditable trail. In one of the proposed systems, the MedRec systems, patients can authorize what data to share and with whom.
+In smart cities and autonomous vehicles blockchain helps to solve the problem of centralization, unscalability,
+and unsecured communication architectures by its very nature.
+
 The question remains whether blockchains are really needed and if they really solve a problem or simply shift the problem somewhere else. The next section discusses this point.
 
 \subsection{Discussion}
