minor changes and error corrections

--- a/Talk7/03_related_work/03_related_work.tex
+++ b/Talk7/03_related_work/03_related_work.tex
@@ -1,4 +1,4 @@
-\section{Related Work}
+\section{Blockchain Application in Cybersecurity}
 \label{sec:03_related_work}
 
 Having built the theoretical foundation in section \ref{sec:02_background}, we now focus on the main research question of this work and summarize recent research in the intersection of blockchain and cybersecurity. The subsequent sections can broadly be separated into a low-level, more technical part (sections \ref{subsec:03_ddos} and \ref{subsec:03_pki}), and a high-level, more application-oriented part (sections \ref{subsec:03_IoT} and \ref{subsec:03_applications}).
