--- a/Talk7/02_background/02-2_blockchain.tex
+++ b/Talk7/02_background/02-2_blockchain.tex
@@ -22,12 +22,12 @@ The most important properties of the Blockchain are compiled in the following li
 \subsubsection{Blockchain Application Scenarios}
 Due to the Blockchains various properties, multiple use-cases emerged. Even though the below list is neither exhaustive nor its items disjunct, it shows the most common scenarios for the use of the Blockchain \cite{Wust2017} that are not further discussed in this paper:
 \begin{itemize}
-  \item \textbf{Crypto Currencies}: From the moment when the paper by Satoshi Nakamoto \cite{Nakamoto2009} was published, Blockchains and Crypto Currencies were interlinked. Because a Crypto Currency is per definition a digital asset, the Blockchain suits this use case particularly well.
-  \item \textbf{Supply Chain Management}: In Supply Chain Management, the flow of goods includes "various intermediate storage and production cycles" \cite{Wust2017} and the Blockchain is a good way to store and monitor all processes in a tamperproof manner.
+  \item \textbf{Crypto Currencies}: From the moment when the paper by Satoshi Nakamoto \cite{Nakamoto2009} was published, Blockchains and cryptocurrencies were interlinked. Because a cryptocurrencies is per definition a digital asset, the Blockchain suits this use case particularly well.
+  \item \textbf{Supply Chain Management}: In Supply Chain Management, the flow of goods includes "various intermediate storage and production cycles" \cite{Wust2017} and the Blockchain presents a suitable way to store and verify all processes in a tamperproof manner.
   \item \textbf{Payment and Money Transactions}: Transactions between different banks and result in temporary debts between them. This issue can be solved using \textit{Distributed Ledger Technologies}, that make use of a Blockchain to settle debts.
   \item \textbf{Decentralized Autonomous Organizations (DAO)}: "A DAO is an organization that is run autonomously through a set of smart contracts" \cite{Wust2017}. A DAO is therefore fundamentally dependent on the Blockchain, as it relies on decentralized governance of funds enforced by smart contracts.
   \item \textbf{Proof of Ownership}: The idea of proofing intellectual or physical property is one of the most straightforward use cases for the Blockchain. In this scenario, the user registers his or her property (e.g., image, text or another object like land) through the use of an identity function in the Blockchain. "While this does not fully prove ownership, it does provide evidence of ownership if no one else can show that the object was previously published" \cite{Wust2017}.
 \end{itemize}
 
 \subsubsection{The Blockchain and Cybersecurity}
-In most cases, the Blockchain technology is used within applications of any sorts and kinds to make them more secure. More secure databases, transaction systems for banks, the replacement of certificate authorities or the security of critical physical infrastructures fall into this category. Another field of applications uses the Blockchain directly to mitigate cyber attacks. Examples, therefore, are the mitigation of DDoS Attacks or the handling of PKI related cyber threats. Applications that fall into the second category use the Blockchain more direct and immediate, while the first category uses them on a higher level, to help to reduce the cybersecurity threats in the set up of the application itself. Both of those categories are covered in subsequent sections.
+In most cases, the Blockchain technology is used within different types of applications to make them more secure. More secure databases, transaction systems for banks, the replacement of certificate authorities or the security of critical physical infrastructures fall into this category. Another field of applications uses the Blockchain directly to mitigate cyber attacks. Examples, therefore, are the mitigation of DDoS Attacks or the handling of PKI related cyber threats. Applications that fall into the second category use the Blockchain more direct and immediate, while the first category uses them on a higher level, to help to reduce the cybersecurity threats in the set up of the application itself. Both of those categories are covered in subsequent sections.
